[package]

name = "cargo-emscripten"
version = "0.0.1"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
build = "build/main.rs"

[lib]
name = "cargo_emscripten"
path = "src/lib.rs"

[dependencies]
regex = "*"
regex_macros = "*"

[build-dependencies]
git2 = "*"

[dependencies.cargo]
git = "https://github.com/rust-lang/cargo"
